Finalized payload drawings and schemicatics. Fixed authors. Fixed minor errors

--- a/Bib.tex
+++ b/Bib.tex
@@ -25,6 +25,9 @@ S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek,
 \bibitem{GCRs}
   https://helios.gsfc.nasa.gov/gcr.html
 
+\bibitem{SolarCycle}
+  Hathaway, D. H. (2015). The Solar Cycle. Living Reviews, 12. doi:10.1007/lrsp-2015-4
+  
 \bibitem{NASA HRP}
   https://www.nasa.gov/hrp
 
