--- a/Sections/AppendixA.tex
+++ b/Sections/AppendixA.tex
@@ -3,3 +3,19 @@
 \label{sec:Appendix A}
 
 \subsection{Payload Dimensions}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\textwidth]{./Figures/PayloadDrawing.pdf}
+  \caption{Drawing for the preliminary payload design. All dimensions are in millimeters.}
+  \label{fig:PayloadDimensions} 
+\end{figure}
+
+\newpage
+
+\subsection{Electronics Wiring Diagram}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\textwidth]{./Figures/WiringDiagram.pdf}
+  \caption{Preliminary wiring configuration of the flight computer, electronics, and sensors.}
+  \label{fig:WiringDiagram}
+\end{figure}
