--- a/Sections/Authors.tex
+++ b/Sections/Authors.tex
@@ -2,6 +2,8 @@
 \newcommand{\CS}{College of Natural Sciences and Mathematics, Department of Computer Science, University of Houston, Houston, TX 77204, USA}
 \newcommand{\Biology}{College of Natural Sciences and Mathematics, Department of Biology, University of Houston, Houston TX, 77204, USA}
 \newcommand{\Electrical}{Cullen College of Engineering, Department of Electrical Engineering, University of Houston, Houston TX, 77204, USA}
+\newcommand{\BME}{Cullen College of Engineering, Department of Biomedical Engineering, University of Houston, Houston TX, 77204, USA}
+\newcommand{\Chemical}{Cullen College of Engineering, Department of Chemical and Biomolecular Engineering, University of Houston, Houston TX, 77204, USA}
 
 
 %--- Add authors in the order they should appear
@@ -9,10 +11,26 @@
 \author{J.~Patel}\affiliation{\Physics}
 \author{M.~Butowicz}\affiliation{\CS}
 \author{T.~Hill}\affiliation{\Physics}
+\author{C. Amaya}
+\author{J. Arguello}
+\author{A. Boggs}\affiliation{\Physics}
+\author{C. Bush}\affiliation{\BME}
+\author{A. Elsaadi}
+\author{K. Fleming}\affiliation{\Chemical}
+\author{S. Gupta}
+\author{D. Howard}\affiliation{\Electrical}
+\author{E. Humble}
+\author{A. Kalavadwala}
+\author{K. Ngo}\affiliation{\Physics}
+\author{C. Rimbau}\affiliation{\Biology}
+\author{K. Stubits-Gallagher}
+\author{J. Tristan}
+\author{H. Trong}
+\author{A. Vega}
 \author{S.~George}\affiliation{\Physics}
+\author{I.~Wilson}\affiliation{\Biology}
 \author{D.~Pattison}\affiliation{\Biology}
+\author{P.~Gunaratne}\affiliation{\Biology}
 \author{A.~L.~Renshaw}\affiliation{\Physics}
-
-
 
 
