--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -10,6 +10,7 @@ The main objectives of the 2019 mission is to study the exposure to ionizing rad
 The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere. 
 However, we are also interested in the humans that reside in such harsh environments.
 We will construct a thermally-controlled, pressurized mock-up International Space Station (ISS) module containing a scintillated MiniPIX.
+The pressure will be held constant at \SI{1}{atm} to replicate conditions aboard the ISS.
 This allows us to study the particle cascades induced by the materials of the module, which will give information regarding the dose that astronauts are exposed to while in space.
 The payload will also contain a second, unscintillated MiniPIX that will reside outside of the ISS module, recording the outside radiation exposure.
 This second MiniPIX will act as a control for the ISS module, but also allows us to study the environment that extremophiles are exposed to.
@@ -31,7 +32,7 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \noindent \textbf {Secondary Scientific Objectives:}
 \begin{enumerate}
 \item Testing the newly developed astrobiology hardware in flight and establish a more reliable method for collecting microbes in extreme environments at high-altitude.
-\item <<Michael: List electronics objectives i.e. batteries, redundant storage mechanism, etc.>>
+\item Implement a redundant storage system for all data recorded.
 \item Establish a methodology which allows two or more MiniPIX devices to be used in conjunction.
 \item Study and test the performance of organic photovoltaic solar cells in the intense radiation environment.
 \end{enumerate}
