--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -32,7 +32,7 @@
 \begin{figure}[!h]
   \begin{center}
     \includegraphics[width=1\textwidth]{./Figures/TeamRoleTree.pdf}
-    \caption{Team role tree for the current SORA 2.0 UH team.}
+    \caption{Team role tree for the current UH HASP team.}
     \label{fig:Roles} 
   \end{center}
 \end{figure}
