--- a/Sections/Procedures.tex
+++ b/Sections/Procedures.tex
@@ -7,11 +7,12 @@
 \subsubsection{Objectives}
 %Sanitization procedures are critical. They need to be checked and verified to ensure that our samples will not become contaminated. If the samples were to become contaminated it would make any possible bacterial collection data inconsequential.
 The Sanitization procedures of the previous flight were rigorous and we will conduct this year's flight within the same SterilGARD e3 Class II Biological Safety Cabinet. 
+
 \subsubsection{Sterilization Preflight}
 The payload will be built within the confines of a class 100 clean hood that is located inside of a class 10,000 clean room. Any tools that are used to construct the sampling box will be heat sterilized at \SI{120}{\celsius} for \SI{20}{\minute}. This will be followed by exposing each side of the container to germicidal UV-C (\SI{254}{\nano\meter}) light for \SI{20}{\minute} and then soaked overnight in 91\% isopropyl alcohol to denature proteins in any possible sources of contaminating bacteria. This sterilization method destroys close to 100\% of all organisms and their endospores. To sterilize parts that would otherwise be damaged by the autoclave method they will be cleaned by hand with 91\% isopropyl alcohol to kill microorganisms by denaturing proteins and dissolving the lipid membrane. Following this, the materials will be rinsed with a 95\% ethanol (v/v) solution as an extra precautionary step to ensure complete decontamination. After all parts have dried, the sampling box will be constructed and placed in a gas-porous sterilization pouch and exposed to ethylene oxide (EO) at a concentration of 0.45-0.65 \SIrange{0.45}{0.65}{\milli\gram\per\meter\cubed} at \SI{55}{\celsius} and 30-50 \% RH for \num{4} hours to annihilate any spores and to provide another form of anti-bacterial treatment.  Once the final HASP integration is ready for sampling clean box are produced, the chambers will be sterilized and sealed. After the containers are integrated into the rest of the payload, the entire device will be placed in an autoclave bag for transportation.
 
 \subsubsection{Sterilization Post flight}
-Before payload descent, we will shut off all of our systesms. By powering down all the systems, the arm will retract into the sterile container and be sealed by the rubber O-ring on the lid. Each team member involved in the recovery process will wear new latex gloves; cleaned with 91 \% isopropyl alcohol and will extract the clean box from the SORA 3 payload and placed into a sterile cold cotnainer to perserve any organisms captured. The clean box will remain sealed until decontamination procedures are complete and the cold bo has reached the University of Houston clean room. The payload will be disassembled under class 100 conditions and all tools used during this procedure will be either heat or 91 \% isopropyl alcohol sterilized. Once in the clean room, the same procedures that were performed preflight will be performed post flight.The fluropore membrane filters will be carefully extracted from the clean box and the low sample DNA extraction will be performed on each individual filter. The remaining DNA fluid will be stored within the -4\degree C sample storage. 
+Before payload descent, we will shut off all of our systesms. By powering down all the systems, the arm will retract into the sterile container and be sealed by the rubber O-ring on the lid. Each team member involved in the recovery process will wear new latex gloves; cleaned with 91 \% isopropyl alcohol and will extract the clean box from the SORA 3 payload and placed into a sterile cold cotnainer to perserve any organisms captured. The clean box will remain sealed until decontamination procedures are complete and the cold bo has reached the University of Houston clean room. The payload will be disassembled under class 100 conditions and all tools used during this procedure will be either heat or 91 \% isopropyl alcohol sterilized. Once in the clean room, the same procedures that were performed preflight will be performed post flight.The fluropore membrane filters will be carefully extracted from the clean box and the low sample DNA extraction will be performed on each individual filter. The remaining DNA fluid will be stored within the \SI{-4}{\celsius} sample storage. 
 
 
 \subsection{Testing and Integration}
@@ -20,6 +21,7 @@ Before payload descent, we will shut off all of our systesms. By powering down a
 Each subsystem will be tested in-house with a vacuum chamber.
 This testing phase will be used to ensure that each component of each subsystem performs as it should while in near-vacuum conditions, so if any problem arises it can be understood and fixed.
 The ISS module structure will be tested individually with a pressure sensor to ensure that the module remains pressurized for a full \num{24} hour period which will ensure that the welded joints and the hermetic seal are sufficient.
+To ensure the construction is sound and flight-ready, the ISS structure will be repeatedly tested in the vacuum chamber up until the time of flight.
 The high-performance devices (i.e. the MiniPIXs and the RP3) will be thermally tested by performing and collecting data for a full \num{24} hour period.
 Next, the full electronics system will be tested to ensure the astrobiology components correctly respond to the changing pressure.
 To conclude vacuum testing, all subsytems will be fully integrated into one assembly which will then be tested in near-vacuum conditions for a \num{24} hour period.
@@ -32,11 +34,17 @@ The astrobiology system will be tested without the membrane filters so as to con
 Any necessary tweaks or changes will be made to properly integrate our payload with the HASP systems.
 The system will be considered integrated once the payload appropriately receives power and commands and completes thermal testing.
 
+As of now, all \num{17} members of the UH HASP team will attend integration. 
+
 \subsubsection{Post-Integration Operations}
 Once integration is complete, the subsystems will undergo one final check, and the astrobiology system will be sterilized and fitted with the membrane filters. If funds can support it, we will send a small team to New Mexico to oversee the flight operations.
 
 \subsection{Flight Operations}
 Each system is autonomous, however, a mission control team will monitor the downlinked data to determine the status of each subsystem. If the astrobiology system fails to automatically respond or the electronics systems needs a reboot, the corresponding discrete command will be sent.
+The flight operations team will consist of the project leader and the three system coordinators.
 
 \subsection{Post-Flight Operations}
 If a team is onsite in New Mexico, the data storage systems will be collected and safely stored. Otherwise, the payload will be shipped to our facilities.
+
+\subsection{Payload Orientation}
+The SORA 3 payload does not have any preferred orientation or placement on the HASP gondola.
