--- a/Astrobiology/IntroAstro.tex
+++ b/Astrobiology/IntroAstro.tex
@@ -1,9 +1,9 @@
 \subsection{Astrobiology}
 \label{sec:AstrobiologyBackground}
 
-Extremophiles are microorganisms that thrive in physically and/or chemically extreme conditions, which are detrimental to most of life on Earth as we know it. These organisms and microbes have been found everywhere, from deep underwater volcano vents to buried ice lakes in Antarctica (\cite{Extremophiles}). 
+Extremophiles are microorganisms that thrive in physically and/or chemically extreme conditions, which are detrimental to most of life on Earth as we know it. These organisms and microbes have been found everywhere, from deep underwater volcano vents to buried ice lakes in Antarctica \cite{Extremophiles}. 
 
-Fungi and bacterial spores have also been found in the stratosphere. Today, the most common altitudes for organism and microbe collection in the atmosphere are in the range of approximately 10 km to 20 km above Earth’s surface. As illustrated in the table below, very little data exists on microbiological samples captured in the stratosphere (\cite{Extremophiles}). Conditions at altitudes of 30km to 40km are extreme in temperature, pressure and radiation exposure. Arguably, each successful collection expedition, of at least 30 km into the upper atmosphere, provides information that can be useful in determining what life forms can exist inside and outside of Earth’s biosphere. Additionally, RNA analysis of the organisms and microbes can provide useful insight pertaining to their ability to survive in an environment with elevated levels of radiation.  
+Fungi and bacterial spores have also been found in the stratosphere. Today, the most common altitudes for organism and microbe collection in the atmosphere are in the range of approximately 10 km to 20 km above Earth’s surface. As illustrated in the table below, very little data exists on microbiological samples captured in the stratosphere \cite{Extremophiles}. Conditions at altitudes of 30km to 40km are extreme in temperature, pressure and radiation exposure. Arguably, each successful collection expedition, of at least 30 km into the upper atmosphere, provides information that can be useful in determining what life forms can exist inside and outside of Earth’s biosphere. Additionally, RNA analysis of the organisms and microbes can provide useful insight pertaining to their ability to survive in an environment with elevated levels of radiation.  
 
  Our experiment focuses on designing a more energy efficient compact collection apparatus that refining our sanitization procedures for preflight assembly, post flight disassembly, and RNA sequencing preparation. We also want to test the effectiveness of rotating filters to stationary ones. The samples we will collect play an important role in expanding our knowledge about Earth’s biosphere. Future studies could produce meaningful contributions to the fields of gene therapy, RNA interface, and cosmic shielding; and provide valuable insight about how life can be distributed on Earth, and ultimately, through outer-space.
 
@@ -14,7 +14,7 @@ Fungi and bacterial spores have also been found in the stratosphere. Today, the 
 %\label{fig:AstroHist}
 %\end{figure} 
 
-Our experiment is an attempt to further develop our technique for capturing microorganisms in the upper atmosphere, as demonstrated during our 2017~\cite{SORA1} flight; which was inspired by the LSU HASP 2011, 2012, 2013 flights~\cite{LSU} and from research by D.R. Canales~\cite{Canales}.  This flight will help confirm the results from our first and second flights(\cite{SORA2}).  We will use a rotating arm mechanism to sample the air for microorganisms through the use of fluropore membrane filters. The samples we hope to collect are an important part to expanding our understanding of Earth's biosphere. Further studies could provide more insight on how life can be distributed on Earth, and ultimately, through outer-space.
+Our experiment is an attempt to further develop our technique for capturing microorganisms in the upper atmosphere, as demonstrated during our 2017~\cite{SORA1} flight; which was inspired by the LSU HASP 2011, 2012, 2013 flights~\cite{LSU} and from research by D.R. Canales~\cite{Canales}.  This flight will help confirm the results from our first and second flights\cite{SORA2}.  We will use a rotating arm mechanism to sample the air for microorganisms through the use of fluropore membrane filters. The samples we hope to collect are an important part to expanding our understanding of Earth's biosphere. Further studies could provide more insight on how life can be distributed on Earth, and ultimately, through outer-space.
 
 \begin{table}[!ht]
   \centering
