Fixed small errors

--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -58,9 +58,8 @@ Inside the capsule will be a scintillated MiniPIX that will record the radiation
 The scintillated MiniPIX will measure the neutrons within the ISS structure in attempt to determine the exposure within the structure.
 
 The materials that make-up the module will be those used in the outer walls on the ISS and will have the same thickness.
-The main differences in structure will be the lack of standoffs and the lack of a multi-layer insulator (MLI) in our module.
-The walls of the ISS have standoffs between layers of materials, which increases the total wall thickness to about one foot.
-Additionally, the MLI used by NASA is not available commercially.
+The main differences in structure will be the omission of standoffs and a multi-layer insulator (MLI) in our module.
+The walls of the ISS have standoffs between layers of materials, which increases the total wall thickness to about one foot, and the MLI used by NASA is not available commercially.
 %Due to being in space, the gaps between the layers are a vacuum.
 In the interest of saving space, we will not include the standoffs, and all materials will be layered on one another in the same order as they are used on the ISS.
 
