--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -3,11 +3,13 @@
 
 
 The 2019 University of Houston (UH) HASP team has set out to expand upon the previous missions \cite{SORA1}\cite{SORA2} from the UH team by applying the knowledge and technology that has accrued.
-The methodology of the first two missions has provided a proof of concept for handling tools, such as the MiniPIX particle detector,  in extreme environments.
+The methodology of the first two missions has provided a proof of concept for handling tools, such as the MiniPIX particle detector, in extreme environments.
 This will serve as the platform for the 2019 mission.
 
 The main objectives of the 2019 mission is to study the exposure to ionizing radiation that organisms face in the upper atmosphere and sample these organisms and bring them to the surface.
-The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere. 
+The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere.
+As such, our payload will be a continuation of the work performed by the previous UH HASP teams and will be called the Stratospheric Organism and Radiation Analyzer (SORA) 3.
+
 However, we are also interested in the humans that reside in such harsh environments.
 We will construct a thermally-controlled, pressurized mock-up International Space Station (ISS) module containing a scintillated MiniPIX.
 The pressure will be held constant at \SI{1}{atm} to replicate conditions aboard the ISS.
