--- a/Electronics/SOCRATESDesign.tex
+++ b/Electronics/SOCRATESDesign.tex
@@ -21,12 +21,13 @@ Our payload will utilize 14 thermistors to measure temperature at various points
   \hline
   \multicolumn{1}{c}{\bfseries Sensor} & {\bfseries Quantity} & {\bfseries Platform} & {\bfseries Purpose} \\
   \hline
-  Thermistor          		& 4 & Arduino  		& Record temperature measurements  \\
-  Pressure (\SIrange{0}{3.44}{\kilo\pascal})        				& 1 & Arduino 		& Record lower pressure measurements \\
-  Pressure (\SIrange{20}{110}{\kilo\pascal})        				& 1 & Arduino 		& Record higher pressure measurements \\
-  Accelerometer       		& 1 & RP3    		& Report the current state of astrobiology system \\
-  Real Time Clock 				& 2 & Arduino/RP3 	& Record timestamps in UTC \\
-  MiniPIX         				& 2 & RP3     		& Cosmic ray detector \\
+  Thermistor & 4 & Arduino & Record temperature measurements  \\
+  Pressure (\SIrange{0}{3.44}{\kilo\pascal}) & 1 & Arduino & Record lower pressure measurements \\
+  Pressure (\SIrange{20}{110}{\kilo\pascal}) & 1 & Arduino & Record higher pressure measurements \\
+  Photodiodes & 3 & Arduino & Record intensity of visible light \\
+  Accelerometer & 1 & RP3 & Report the current state of astrobiology system \\
+  Real Time Clock & 2 & Arduino/RP3 & Record timestamps in UTC \\
+  MiniPIX & 2 & RP3 & Cosmic ray detector \\
   \hline
   \hline
 \end{tabular}
