--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -78,7 +78,7 @@ The MiniPIX's sensor can only interact with charged particles. In order to measu
 By covering half of the sensor, we can compare the uncovered half with the data recorded by the MiniPIX outside of the ISS module.
 
 \subsubsection{Organic Photovoltaic Cells}    
-We will be using four different types of solar cells with a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, leaving one face free for any unique cells we may develop during our research. Half of our panels will be prefabricated and purcahsed from a supplier, and will be regarded as a control against which we will evaluate our in house fabricated cells. For the in house fabrication, we will be focusing on polymer:fullerne BHJ and perovskite active layer cells. We intend to investigate a variety of polymer:fullerene blends and develop a procedue for fabrication which yields the greatest PCE and MPP in the stratospheric environment, and to investigate the possibility of transpatent conductive oxide(TCO) layers besides the traditional indium tin oxide (ITO) glass and polyethylene terephthalate (PET) plastic. 
+We will be using four different types of solar cells with a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, leaving one face free for any unique cells we may develop during our research. Half of our panels will be prefabricated and purcahsed from a supplier, and will be regarded as a control against which we will evaluate our in house fabricated cells. For the in house fabrication, we will be focusing on polymer:fullerne BHJ and perovskite active layer cells. We intend to investigate a variety of polymer:fullerene blends and develop a procedue for fabrication which yields the greatest PCE and MPP in the stratospheric environment, and to investigate the possibility of transpatent conductive oxide(TCO) layers besides the traditional indium tin oxide (ITO) glass and polyethylene terephthalate (PET) plastic. \cite{nextgen_TCO}
 
 Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point ($MPP$), $V_{max}$ and $I_{max}$, open-circuit voltage ($V_{oc}$ and short circuit current ($I_{sc}$), leading to the fill factor ($FF$) and efficiency ($PCE$). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's Law. From the plot, $V_{oc}$ is seen when $I=0$, $I_{sc}$ is when $V = 0$, and the $MPP$ is where $V_{max}$ and $I_{max}$ meet. The $MPP$ can then tell us the efficiency ($Eff$), which is defined as
 \begin{equation}
@@ -88,7 +88,7 @@ The fill factor gives information on the "squareness" of the IV curve and is def
 \begin{equation}
   FF = \dfrac{MPP}{V_{oc}I_{sc}},
 \end{equation}
-and it is optimal to maximize the fill factor. \cite{OPV operation}
+and it is optimal to maximize the fill factor. \cite{OPV_operation}
 
 Before flight, every cell will be characterized with IV curves using AMG 0 simulated sun light to generate a characteristic profile, as expected in the space environment, for the each new cell, and microscopy will be preformed to understand the topology and interfacial details of the new cells. Currently our plan is to have one of each cell type remaining on ground as a control, and we will have each panel onboard the payload wired to an arduino unit where IV curves will be recorded during flight, with a characteristic profile generated every \SI{30}{\second}. This data will be stored on the arduino with backup stored to a raspberry pi. On board our payload we will be measuring the tempreature and pressure of the environment to deteremaine any effects on the preformance due to temperature and pressure changes. Finally after recovery, the IV data will be extracted from the arduino/raspberry pi and plotted, and each cell will be re characterized and once again viewed under the microscope to look for any physical defects. 
     
