--- a/Bib.tex
+++ b/Bib.tex
@@ -67,7 +67,7 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
 \bibitem{StuartThesis} 22
   George, S., \textit{Dosimetric Applications of Hybrid Pixel Detectors}, University of Wollongong, Australia, 2015.
   
-  \bibitem{OPV operation}
+  \bibitem{OPV_operation}
   DOI: 10.1038/nmat3807 
   
   \bibitem{OSCAR}
@@ -79,6 +79,9 @@ DOI: 10.1016/j.solmat.2018.03.024
 
 \bibitem{Space organic cells}
 Sheila Bailey and Ryne Raffaelle, Space Solar Cells and Arrays
+
+\bibitem{nextgen_TCO}
+Kuan Sun, Yijie Xia, and Jianyong Ouyang, Next-Generation transparent electrode materials for organic solar cells
 
 
 %\bibitem{uv_irradiance}
