--- a/Application.tex
+++ b/Application.tex
@@ -47,7 +47,7 @@
   By learning from the methodology imposed by the previous SORA missions, the SORA 3 payload will feature improved systems to sample for extremophilic microorganisms and observe the stratospheric radiation environment.
   An overhauled system to capture microorganisms is being implemented by learning from what did and did not work on the previous SORA missions.
   Furthermore, the radiation system is expanding to include a container that will closely mimic an ISS module in terms of material structure in hopes of observing the radiation environment to which astronauts are exposed.
-  In addition, the SORA 3 payload will implement a new system featuring organic photovoltaic cells in the interest of observing the change in performance and molecular structure of the cells as a result of prolonged exposure to intense radiation.
+  In addition, the SORA 3 payload will implement a new system featuring organic photovoltaic cells in the interest of observing the change in performance and molecular structure of the cells as a result of prolonged exposure to intense radiation and a near space environment.
   The first two missions have established a technological foundation from which SORA 3 can expand through exploring more deeply the topics and challenges of the first missions. SORA 3 will continue to use hobby electronics to test the bounds of commerically available technology.
   
   \newpage %Breaks page for the Table of Contents.
