Update to Design of AstroBio
Updated the sampled volume compared to the previous flights

--- a/Astrobiology/DesignAstro.tex
+++ b/Astrobiology/DesignAstro.tex
@@ -2,7 +2,7 @@
 \label{sec:AstrobiologySystem}
 
 \subsubsection{Design and Operation}
-The collection assembly will be designed as a one mechanized enclosure as shown below. The rotating arm will be raised out of the collection container and began rotating once float altitude has been reached. The raising of the rotating arms will be done by a L-16 linear servo motor. The rotation of the filter arm will be provided by the rotational motor mounted onto the filter arm. The lid on the top of the linear servo will seal the clean box during ascent and descent. The  Fluropore Membrane filters will be mounted on the ends of the rotating arm. The arms will spin at 80 RPM for the duration of float conditions. When it is time for the payload to descend, a command will be sent to retract the rotating mechanism back into the clean box. The fluropore filters on the rotation arm will be compared to the ones on mounted on the linear servo as shown in the figure below. Background samples will be taken using the same fluropore membrane filters and will sample the various places the payload will be, such as the UH lab room, the clean room used for sterilization and the Fort Sumner launch site. 
+The collection assembly will be designed as a one mechanized enclosure as shown below. The rotating arm will be raised out of the collection container and began rotating once float altitude has been reached. The raising of the rotating arms will be done by a L-16 linear servo motor. The rotation of the filter arm will be provided by the rotational motor mounted onto the filter arm. The lid on the top of the linear servo will seal the clean box during ascent and descent. The  Fluropore Membrane filters will be mounted on the ends of the rotating arm. The arms will spin at 80 RPM for the duration of float conditions. In theory, the sampled volume will be the cross-sectional area of each filter multiplied by the distance the payload travels, which results in a far greater sampled volume than the 0.03 liters per minute sampling of the pumps from the previous flight.\cite{SORA2} When it is time for the payload to descend, a command will be sent to retract the rotating mechanism back into the clean box. The fluropore filters on the rotation arm will be compared to the ones on mounted on the linear servo as shown in the figure below. Background samples will be taken using the same fluropore membrane filters and will sample the various places the payload will be, such as the UH lab room, the clean room used for sterilization and the Fort Sumner launch site. 
 
 \begin{figure}[!h] 
 	\begin{center}
