Updated authors, bib, and pwbudget

--- a/Sections/Authors.tex
+++ b/Sections/Authors.tex
@@ -1,9 +1,10 @@
 \newcommand{\Physics}{College of Natural Sciences and Mathematics, Department of Physics, University of Houston, Houston, TX 77204, USA}
 \newcommand{\CS}{College of Natural Sciences and Mathematics, Department of Computer Science, University of Houston, Houston, TX 77204, USA}
 \newcommand{\Biology}{College of Natural Sciences and Mathematics, Department of Biology, University of Houston, Houston TX, 77204, USA}
-\newcommand{\Electrical}{Cullen College of Engineering, Department of Electrical Engineering, University of Houston, Houston TX, 77204, USA}
 \newcommand{\BME}{Cullen College of Engineering, Department of Biomedical Engineering, University of Houston, Houston TX, 77204, USA}
 \newcommand{\Chemical}{Cullen College of Engineering, Department of Chemical and Biomolecular Engineering, University of Houston, Houston TX, 77204, USA}
+\newcommand{\Electrical}{Cullen College of Engineering, Department of Electrical Engineering, University of Houston, Houston TX, 77204, USA}
+\newcommand{\Mechanical}{Cullen College of Engineering, Department of Mechanical Engineering, University of Houston, Houston TX, 77204, USA}
 
 
 %--- Add authors in the order they should appear
@@ -11,7 +12,7 @@
 \author{J.~Patel}\affiliation{\Physics}
 \author{M.~Butowicz}\affiliation{\CS}
 \author{T.~Hill}\affiliation{\Physics}
-\author{C. Amaya}
+\author{C. Amay}\affiliation{\CS}
 \author{J. Arguello}
 \author{A. Boggs}\affiliation{\Physics}
 \author{C. Bush}\affiliation{\BME}
@@ -19,14 +20,13 @@
 \author{K. Fleming}\affiliation{\Chemical}
 \author{S. Gupta}
 \author{D. Howard}\affiliation{\Electrical}
-\author{E. Humble}
-\author{A. Kalavadwala}
+\author{E. Humble}\affiliation{\CS}
+\author{A. Kalavadwala}\affiliation{\Mechanical}
 \author{K. Ngo}\affiliation{\Physics}
 \author{C. Rimbau}\affiliation{\Biology}
-\author{K. Stubits-Gallagher}
-\author{J. Tristan}
-\author{H. Trong}
-\author{A. Vega}
+\author{J. Tristan}\affiliation{\Mechanical}
+\author{H. Trong}\affiliation{\Mechanical}
+\author{A. Vega}\affiliation{\Mechanical}
 \author{S.~George}\affiliation{\Physics}
 \author{I.~Wilson}\affiliation{\Biology}
 \author{D.~Pattison}\affiliation{\Biology}
