--- a/Bib.tex
+++ b/Bib.tex
@@ -25,7 +25,7 @@ S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek,
 \bibitem{GCRs}
   https://helios.gsfc.nasa.gov/gcr.html
 
-\bibitem{SolarCycle}
+\bibitem{Hathaway}
   Hathaway, D. H. (2015). The Solar Cycle. Living Reviews, 12. doi:10.1007/lrsp-2015-4
   
 \bibitem{NASA HRP}
