--- a/Sections/PWBudget.tex
+++ b/Sections/PWBudget.tex
@@ -4,7 +4,7 @@
 %In order to stay within the power constraints, a robust power supply will need to  handle all the components of the payload.  The power supply we will be using is the same PPM-DC-ATX-P by WinSystems INC that we used on our first flight~\cite{SORA}.  During our last flight it operated flawlessly and powered our payload throughout the whole mission.  It offers the desired number of \SI{+5}{\volt} and \SI{+12}{\volt} outputs needed to power the payload's electronics.  This power supply effectively takes \SI{+30}{\volt} and steps it down to two \SI{+12}{\volt} and two \SI{+5 }{\volt} outputs.  One of the \SI{+12}{\volt} outputs goes to the Arduino since it can step down to the appropriate voltages internally while the other goes to a PWM motor for the solenoid.  One of the \SI{+5 }{\volt} outputs powers two analog sensors that will be sent to HASP through the EDAC connection (more on that in the next sections).  The Radiation subsystem will be powered by batteries for the duration of the flight (see Appendix A).  The power supply also has four ground outputs that will be used by each respective component. 
 \begin{table}[H]
   \centering
-  \caption{Power and weight budget for SORA 2.0} 
+  \caption{Power and weight budget for SORA 3} 
   \label{tab:budget}
   \bigskip
   \begin{tabular}{cccccc}
@@ -12,15 +12,16 @@
     \hline
     \multicolumn{1}{c}{\bfseries Component} & \multicolumn{1}{c}{\bfseries Voltage (VDC)} &  \multicolumn{1}{c}{\bfseries Current (mA)} & \multicolumn{1}{c}{\bfseries Duty Cycle (\%)} & \multicolumn{1}{c}{\bfseries Power (mW)} & \multicolumn{1}{c}{\bfseries Mass (g)} \\
     \hline
-    30 to 12 V DC/DC Converter & 30 & 1500 & 100 & 45000 & 10 \\
+    30 to 5 V DC/DC Converter & 30 & 1500 & 100 & 45000 & 10 \\
     RP3 + (2)MiniPIX & 5 & 1210 & 100 & 6050 & 92.4 \\    
     Linear Actuator & 12 & 650 & 20 & 7800 & 84 \\
     Servo Motor & 6 & 550 & 100 & 3300 & 39 \\
-    Accelerometer & 5 & 3.9 & 100 & 19.5 & \\
-    (16)Thermistors & 5 & 4 & 100 & 20 & \\
-    Altitude/Pressure Sensor & 3.6 & 1.4 & 100 & 5.04 & \\
-    Low Pressure Pressure Sensor & 5 & 7 & 100 & 35 & \\   
-
+    Accelerometer & 5 & 3.9 & 100 & 19.5 & 10 \\
+    (14)Thermistors & 5 & 3.5 & 100 & 17.5 & 80 \\
+    Altitude/Pressure Sensor & 3.6 & 1.4 & 100 & 5.04 & 10 \\
+    Low Pressure Pressure Sensor & 5 & 7 & 100 & 35 & 10 \\   
+    
+    
     %Temperature Sensor 1 & 5 & 0.09 & 100 & 0.45 & 0.02 \\    
     %Polulu Driver & 30 & 1000 & CAL & CAL & 1 \\ \hline  
     %Pressure \& Altitude Sensor 1 & 3.3 & 1.4 & 100 & 4.62 & 0.005 \\ \hline
@@ -30,7 +31,7 @@
     %Humidity Sensor & 3.3 & 0.5 & 100 & 1.65 & 0.0025 \\ \hline
     Structure w/ bolts & N/A & N/A & N/A & N/A & 5000 \\
     \hline
-    \textbf{Total} & \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{} \\
+    \textbf{Total} & \textbf{N/A} & \textbf{2427.6 peak} & \textbf{N/A} & \textbf{17234} & \textbf{5215} \\
     \hline
     \hline
   \end{tabular}
