Finished Authors. Changed a number

--- a/Sections/Authors.tex
+++ b/Sections/Authors.tex
@@ -13,12 +13,12 @@
 \author{M.~Butowicz}\affiliation{\CS}
 \author{T.~Hill}\affiliation{\Physics}
 \author{C. Amay}\affiliation{\CS}
-\author{J. Arguello}
+\author{J. Arguello}\affiliation{\Mechanical}
 \author{A. Boggs}\affiliation{\Physics}
 \author{C. Bush}\affiliation{\BME}
-\author{A. Elsaadi}
+\author{A. Elsaadi}\affiliation{\Mechanical}
 \author{K. Fleming}\affiliation{\Chemical}
-\author{S. Gupta}
+\author{S. Gupta}\affiliation{\Mechanical}
 \author{D. Howard}\affiliation{\Electrical}
 \author{E. Humble}\affiliation{\CS}
 \author{A. Kalavadwala}\affiliation{\Mechanical}
